# kairos

./: .dockerignore  .env.example  .gitignore  AI_PIPELINE.md  API_REFERENCE.md  BACKEND.md  BENCHMARK.md  CHECKLIST.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FRONTEND.md  PAGES.md  PROJECT_STRUCTURE.md  PROTOCOLS.md  README.md  SDK.md  SECURITY.md  SMART_WALLET.md  UX_AUDIT.md  agentcreation.md  dashboard.md  docker-compose.yml  next_todo.md  package-lock.json  package.json  phase.md  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  render.yaml  vercel.json
contracts/soroban/contracts/custom-account/: Cargo.toml  README.md
contracts/soroban/contracts/custom-account/src/: lib.rs  test.rs
contracts/soroban/contracts/custom-account/test_snapshots/test/: test_check_auth_accepts_standard_account_signature.1.json  test_check_auth_rejects_wrong_signer.1.json  test_custom_account_execution_from_executor.1.json  test_custom_account_initialization.1.json  test_double_initialization_is_rejected.1.json  test_exploit_front_run_init_steals_ownership_pre_fix.1.json  test_front_run_cannot_impersonate_a_different_owner.1.json  test_is_valid_signature_accepts_sep53_wallet_signature.1.json  test_is_valid_signature_rejects_raw_unwrapped_signature.1.json  test_legitimate_init_succeeds_with_owner_auth.1.json  test_unauthorized_init_is_rejected.1.json
contracts/soroban/contracts/delegation-manager/: Cargo.toml  README.md
contracts/soroban/contracts/delegation-manager/src/: lib.rs  test.rs
contracts/soroban/contracts/delegation-manager/test_snapshots/test/: test_hash_parity_check.1.json  (+33 more)
(+832 files in other folders)
