[package]
name = "custom-account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = "2.2.0"
rand = "0.8.5"
sha2 = "0.10"
stellar-strkey = "0.0.10"
