[package]
name = "delegation-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
policies = { path = "../policies" }
custom-account = { path = "../custom-account" }
ed25519-dalek = "2.2.0"
stellar-strkey = "0.0.9"
rand = "0.8"
sha2 = "0.10"
